# notecard

notecard-server/: LICENSE  notecard-server.cabal
notecard-server/app/: Main.hs
notecard-server/src/Notecard/: Lib.hs
